remove add sub-op use case
