# tcp/swagger/swagger.json
@@ -175,70 +175,6 @@
           }
         }
       }
-    },
-    "/projects/{projectUrl}/ops/{opName}/sub-ops": {
-      "parameters": [
-        {
-          "name": "projectUrl",
-          "in": "path",
-          "description": "A projects url. For local projects use an absolute path",
-          "required": true,
-          "type": "string"
-        },
-        {
-          "name": "opName",
-          "in": "path",
-          "description": "The name of the dev op",
-          "required": true,
-          "type": "string"
-        }
-      ],
-      "post": {
-        "summary": "Add sub-op",
-        "tags": [
-          "projects"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "The body of the request",
-            "schema": {
-              "title": "AddSubOpReq",
-              "type": "object",
-              "required": [
-                "subOpUrl"
-              ],
-              "properties": {
-                "subOpUrl": {
-                  "type": "string"
-                },
-                "precedingSubOpUrl": {
-                  "type": "string",
-                  "minLength": 1
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "type": "string"
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "schema": {
-              "type": "string"
-            }
-          }
-        }
-      }
     }
   },
   "definitions": {
